# traicon

./: .env-example  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
app/: main.py
app/pipeline/: tc_pipeline.py
app/prompts/: generate_solution.py  tc_prompts.py
app/tools/: generator.py  technical_contradictions.py
docs/: mkdocs.yml
docs/docs/: index.md
src/config/: settings.py
src/prompts/: base_prompt.py  schemas.py
src/resources/: __init__.py  principles.txt
src/services/: anthropic_service.py  embedding_service.py  openai_service.py
src/utils/: make_parameters.py  make_principles.py  matrix.py
tests/utils/: test_matrix.py
